arregla el baseurl

--- a/index.html
+++ b/index.html
@@ -5,43 +5,43 @@ title: Inicio
 
 <div class="card-container">
     <div class="card">
-        <a href="pages/fisica/0-fisica.html">
-            <div class="card-icon"><img src="assets/icons/Fisica.png" width="150" /></div>
+        <a href="{{ site.baseurl }}/pages/fisica/0-fisica.html">
+            <div class="card-icon"><img src="{{ site.baseurl }}/assets/icons/Fisica.png" width="150" /></div>
             <h2>Física</h2>
             <p>Explora recursos y materiales educativos de física.</p>
         </a>
     </div>
     <div class="card">
-        <a href="pages/matematica/0-matematica.html">
-            <div class="card-icon"><img src="assets/icons/Matematica.png" width="150" /></div>
+        <a href="{{ site.baseurl }}/pages/matematica/0-matematica.html">
+            <div class="card-icon"><img src="{{ site.baseurl }}/assets/icons/Matematica.png" width="150" /></div>
             <h2>Matemática</h2>
             <p>Descubre materiales para el estudio de las matemáticas.</p>
         </a>
     </div>
     <div class="card">
-        <a href="pages/estadistica/0-estadistica.html">
-            <div class="card-icon"><img src="assets/icons/Estadistica.png" width="150" /></div>
+        <a href="{{ site.baseurl }}/pages/estadistica/0-estadistica.html">
+            <div class="card-icon"><img src="{{ site.baseurl }}/assets/icons/Estadistica.png" width="150" /></div>
             <h2>Estadística</h2>
             <p>Accede a recursos para el aprendizaje de estadística.</p>
         </a>
     </div>
     <div class="card">
-        <a href="pages/asistentes/0-asistentes.html">
-            <div class="card-icon"><img src="assets/icons/Asistentes.png" width="150" /></div>
+        <a href="{{ site.baseurl }}/pages/asistentes/0-asistentes.html">
+            <div class="card-icon"><img src="{{ site.baseurl }}/assets/icons/Asistentes.png" width="150" /></div>
             <h2>Asistentes</h2>
             <p>Guías y recursos para R, Python y más.</p>
         </a>
     </div>
     <div class="card">
-        <a href="pages/nivelacion/0-nivelacion.html">
-            <div class="card-icon"><img src="assets/icons/Nivelacion.png" width="150" /></div>
+        <a href="{{ site.baseurl }}/pages/nivelacion/0-nivelacion.html">
+            <div class="card-icon"><img src="{{ site.baseurl }}/assets/icons/Nivelacion.png" width="150" /></div>
             <h2>Nivelación</h2>
             <p>Nivela tus conociemientos en matemática.</p>
         </a>
     </div>
     <div class="card">
-        <a href="pages/docentes/0-docentes.html">
-            <div class="card-icon"><img src="assets/icons/Docente.png" width="150" /></div>
+        <a href="{{ site.baseurl }}/pages/docentes/0-docentes.html">
+            <div class="card-icon"><img src="{{ site.baseurl }}/assets/icons/Docente.png" width="150" /></div>
             <h2>Docentes</h2>
             <p>Información de nuestros docentes.</p>
         </a>
