--- a/pages/estadistica/0-estadistica.html
+++ b/pages/estadistica/0-estadistica.html
@@ -11,7 +11,7 @@ title: Estadística
         <a href="EstadísticaAplicada.html">
             <div class="card-body">
                 <h5 class="card-title">Estadística Aplicada <br>  (05-N0072)</h5>
-                <img src="/assets/icons/estadistica/EstadísticaAplicada.png" alt="EstadísticaAplicada.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/estadistica/EstadísticaAplicada.png" alt="EstadísticaAplicada.png" width="150">
             </div>
         </a>
     </div>
@@ -20,7 +20,7 @@ title: Estadística
         <a href="EstadísticaBásica.html">
             <div class="card-body">
                 <h5 class="card-title">Estadística Básica <br>  (05-N0067)</h5>
-                <img src="/assets/icons/estadistica/EstadísticaBásica.png" alt="EstadísticaBásica.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/estadistica/EstadísticaBásica.png" alt="EstadísticaBásica.png" width="150">
             </div>
         </a>
     </div>
@@ -29,7 +29,7 @@ title: Estadística
         <a href="EstadísticaI.html">
             <div class="card-body">
                 <h5 class="card-title">Estadística I <br>  (05-N0043)</h5>
-                <img src="/assets/icons/estadistica/EstadísticaI.png" alt="EstadísticaI.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/estadistica/EstadísticaI.png" alt="EstadísticaI.png" width="150">
             </div>
         </a>
     </div>
@@ -38,7 +38,7 @@ title: Estadística
         <a href="EstadísticaII(CD).html">
             <div class="card-body">
                 <h5 class="card-title">Estadística II (CD) <br>  (05-N0052)</h5>
-                <img src="/assets/icons/estadistica/EstadísticaII(CD).png" alt="EstadísticaII(CD).png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/estadistica/EstadísticaII(CD).png" alt="EstadísticaII(CD).png" width="150">
             </div>
         </a>
     </div>
@@ -47,7 +47,7 @@ title: Estadística
         <a href="EstadísticaII.html">
             <div class="card-body">
                 <h5 class="card-title">Estadística II <br>  (05-N0074)</h5>
-                <img src="/assets/icons/estadistica/EstadísticaII.png" alt="EstadísticaII.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/estadistica/EstadísticaII.png" alt="EstadísticaII.png" width="150">
             </div>
         </a>
     </div>
@@ -56,7 +56,7 @@ title: Estadística
         <a href="EstadisticaIV .html">
             <div class="card-body">
                 <h5 class="card-title">Estadistica IV  <br>  (05-N0066)</h5>
-                <img src="/assets/icons/estadistica/EstadisticaIV .png" alt="EstadisticaIV .png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/estadistica/EstadisticaIV .png" alt="EstadisticaIV .png" width="150">
             </div>
         </a>
     </div>
@@ -65,7 +65,7 @@ title: Estadística
         <a href="EstadísticaparaC.delaSalud.html">
             <div class="card-body">
                 <h5 class="card-title">Estadística para C.de la Salud <br>  (05-N0076)</h5>
-                <img src="/assets/icons/estadistica/EstadísticaparaC.delaSalud.png" alt="EstadísticaparaC.delaSalud.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/estadistica/EstadísticaparaC.delaSalud.png" alt="EstadísticaparaC.delaSalud.png" width="150">
             </div>
         </a>
     </div>
