--- a/pages/matematica/0-matematica.html
+++ b/pages/matematica/0-matematica.html
@@ -11,7 +11,7 @@ title: Matemática
         <a href="Álg.LinealyGeom.Analítica.html">
             <div class="card-body">
                 <h5 class="card-title">Álg. Lineal y Geom. Analítica <br>  (05-N0068)</h5>
-                <img src="/assets/icons/matematica/Álg.LinealyGeom.Analítica.png" alt="Álg.LinealyGeom.Analítica.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/Álg.LinealyGeom.Analítica.png" alt="Álg.LinealyGeom.Analítica.png" width="150">
             </div>
         </a>
     </div>
@@ -20,7 +20,7 @@ title: Matemática
         <a href="AlgebraLíneal.html">
             <div class="card-body">
                 <h5 class="card-title">Algebra Líneal <br>  (05-N0048)</h5>
-                <img src="/assets/icons/matematica/AlgebraLíneal.png" alt="AlgebraLíneal.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/AlgebraLíneal.png" alt="AlgebraLíneal.png" width="150">
             </div>
         </a>
     </div>
@@ -29,7 +29,7 @@ title: Matemática
         <a href="Cálculodepredicados.html">
             <div class="card-body">
                 <h5 class="card-title">Cálculo de predicados <br>  (05-N0083)</h5>
-                <img src="/assets/icons/matematica/Cálculodepredicados.png" alt="Cálculodepredicados.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/Cálculodepredicados.png" alt="Cálculodepredicados.png" width="150">
             </div>
         </a>
     </div>
@@ -38,7 +38,7 @@ title: Matemática
         <a href="CálculoI.html">
             <div class="card-body">
                 <h5 class="card-title">Cálculo I <br>  (05-N0027)</h5>
-                <img src="/assets/icons/matematica/CálculoI.png" alt="CálculoI.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/CálculoI.png" alt="CálculoI.png" width="150">
             </div>
         </a>
     </div>
@@ -47,7 +47,7 @@ title: Matemática
         <a href="CálculoII.html">
             <div class="card-body">
                 <h5 class="card-title">Cálculo II <br>  (05-N0070)</h5>
-                <img src="/assets/icons/matematica/CálculoII.png" alt="CálculoII.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/CálculoII.png" alt="CálculoII.png" width="150">
             </div>
         </a>
     </div>
@@ -56,7 +56,7 @@ title: Matemática
         <a href="EcuacionesDiferenciales.html">
             <div class="card-body">
                 <h5 class="card-title">Ecuaciones Diferenciales <br>  (05-N0060)</h5>
-                <img src="/assets/icons/matematica/EcuacionesDiferenciales.png" alt="EcuacionesDiferenciales.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/EcuacionesDiferenciales.png" alt="EcuacionesDiferenciales.png" width="150">
             </div>
         </a>
     </div>
@@ -65,7 +65,7 @@ title: Matemática
         <a href="MatemáticaI.html">
             <div class="card-body">
                 <h5 class="card-title">Matemática I <br>  (05-N0017)</h5>
-                <img src="/assets/icons/matematica/MatemáticaI.png" alt="MatemáticaI.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/MatemáticaI.png" alt="MatemáticaI.png" width="150">
             </div>
         </a>
     </div>
@@ -74,7 +74,7 @@ title: Matemática
         <a href="MatemáticaIyII.html">
             <div class="card-body">
                 <h5 class="card-title">Matemática I y II <br>  (05-N0022)</h5>
-                <img src="/assets/icons/matematica/MatemáticaIyII.png" alt="MatemáticaIyII.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/MatemáticaIyII.png" alt="MatemáticaIyII.png" width="150">
             </div>
         </a>
     </div>
@@ -83,7 +83,7 @@ title: Matemática
         <a href="MatemáticaI-vet.html">
             <div class="card-body">
                 <h5 class="card-title">Matemática I* <br>  (nan)</h5>
-                <img src="/assets/icons/matematica/MatemáticaI.png" alt="MatemáticaI.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/MatemáticaI.png" alt="MatemáticaI.png" width="150">
             </div>
         </a>
     </div>
@@ -92,7 +92,7 @@ title: Matemática
         <a href="MatemáticaII.html">
             <div class="card-body">
                 <h5 class="card-title">Matemática II <br>  (05-N0036)</h5>
-                <img src="/assets/icons/matematica/MatemáticaII.png" alt="MatemáticaII.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/MatemáticaII.png" alt="MatemáticaII.png" width="150">
             </div>
         </a>
     </div>
@@ -101,7 +101,7 @@ title: Matemática
         <a href="MatemáticasDiscretaI.html">
             <div class="card-body">
                 <h5 class="card-title">Matemáticas Discreta I <br>  (05-N0021)</h5>
-                <img src="/assets/icons/matematica/MatemáticasDiscretaI.png" alt="MatemáticasDiscretaI.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/MatemáticasDiscretaI.png" alt="MatemáticasDiscretaI.png" width="150">
             </div>
         </a>
     </div>
@@ -110,7 +110,7 @@ title: Matemática
         <a href="Métodosnuméricos.html">
             <div class="card-body">
                 <h5 class="card-title">Métodos numéricos <br>  (05-N0064)</h5>
-                <img src="/assets/icons/matematica/Métodosnuméricos.png" alt="Métodosnuméricos.png" width="150">
+                <img src="{{ site.baseurl }}/assets/icons/matematica/Métodosnuméricos.png" alt="Métodosnuméricos.png" width="150">
             </div>
         </a>
     </div>
