--- a/pages/nivelacion/0-nivelacion.html
+++ b/pages/nivelacion/0-nivelacion.html
@@ -10,7 +10,7 @@ title: Curso de Nivelación
         <a href="#">
             <div class="card-body">
                 <h5 class="card-title">En construcción</h5>
-                <img src="/assets/icons/construccion.png" alt="En construcción"  width="150">
+                <img src="{{ site.baseurl }}/assets/icons/construccion.png" alt="En construcción"  width="150">
             </div>
         </a>
     </div>
