--- a/pages/fisica/CBS1-FísicaTeo-Prác.html
+++ b/pages/fisica/CBS1-FísicaTeo-Prác.html
@@ -10,7 +10,7 @@ title: CBS1-Física Teo-Prác
         <a href="#">
             <div class="card-body">
                 <h5 class="card-title">En construcción</h5>
-                <img src="/assets/icons/construccion.png" alt="En construcción"  width="150">
+                <img src="{{ site.baseurl }}/assets/icons/construccion.png" alt="En construcción"  width="150">
             </div>
         </a>
     </div>
