reubica fotografías de docentes

--- a/pages/docentes/0-docentes.html
+++ b/pages/docentes/0-docentes.html
@@ -10,7 +10,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Amaguaña Zumba Richard Williams</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/AmaguañaZumbaRichardWilliams.png" alt="Amaguaña Zumba Richard Williams" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/AmaguañaZumbaRichardWilliams.png" alt="Amaguaña Zumba Richard Williams" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Amaguaña Zumba Richard Williams</h5>
@@ -18,9 +18,9 @@ title: Docentes
                 <li>Pregrado</li>
                 <li>Posgrado</li>
                 <li><a href="#" target="_blank">
-                    <img src="{{ site.baseurl }}//assets/icons/linkedin.png" alt="Linkedin" width="25">
+                    <img src="{{ site.baseurl }}/assets/icons/linkedin.png" alt="Linkedin" width="25">
                 </a><a href="#" target="_blank">
-                    <img src="{{ site.baseurl }}//assets/icons/orcid.png" alt="Orcid" width="25">
+                    <img src="{{ site.baseurl }}/assets/icons/orcid.png" alt="Orcid" width="25">
                 </a></li>
             </ul>
         </div>
@@ -29,7 +29,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Anzieta Reyes Juan Camilo</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/AnzietaReyesJuanCamilo.png" alt="Anzieta Reyes Juan Camilo" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/AnzietaReyesJuanCamilo.png" alt="Anzieta Reyes Juan Camilo" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Anzieta Reyes Juan Camilo</h5>
@@ -47,7 +47,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Borrero González Luis José</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/BorreroGonzálezLuisJosé.png" alt="Borrero González Luis José" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/BorreroGonzálezLuisJosé.png" alt="Borrero González Luis José" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Borrero González Luis José</h5>
@@ -66,7 +66,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Bravo Quezada Wilson Gabriel</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/BravoQuezadaWilsonGabriel.png" alt="Bravo Quezada Wilson Gabriel" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/BravoQuezadaWilsonGabriel.png" alt="Bravo Quezada Wilson Gabriel" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Bravo Quezada Wilson Gabriel</h5>
@@ -85,7 +85,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Buenaño Hermosa Edwin Vladimir</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/BuenañoHermosaEdwinVladimir.png" alt="Buenaño Hermosa Edwin Vladimir" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/BuenañoHermosaEdwinVladimir.png" alt="Buenaño Hermosa Edwin Vladimir" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Buenaño Hermosa Edwin Vladimir</h5>
@@ -104,7 +104,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Buitrón Sánchez Gladys Janett</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/BuitrónSánchezGladysJanett.png" alt="Buitrón Sánchez Gladys Janett" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/BuitrónSánchezGladysJanett.png" alt="Buitrón Sánchez Gladys Janett" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Buitrón Sánchez Gladys Janett</h5>
@@ -123,7 +123,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Camacho Cañar Emilse Paquita</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/CamachoCañarEmilsePaquita.png" alt="Camacho Cañar Emilse Paquita" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/CamachoCañarEmilsePaquita.png" alt="Camacho Cañar Emilse Paquita" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Camacho Cañar Emilse Paquita</h5>
@@ -142,7 +142,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Cuaical Enríquez Luis Alfredo</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/CuaicalEnríquezLuisAlfredo.png" alt="Cuaical Enríquez Luis Alfredo" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/CuaicalEnríquezLuisAlfredo.png" alt="Cuaical Enríquez Luis Alfredo" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Cuaical Enríquez Luis Alfredo</h5>
@@ -161,7 +161,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Cueva Almeida Mario Edmundo</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/CuevaAlmeidaMarioEdmundo.png" alt="Cueva Almeida Mario Edmundo" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/CuevaAlmeidaMarioEdmundo.png" alt="Cueva Almeida Mario Edmundo" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Cueva Almeida Mario Edmundo</h5>
@@ -180,7 +180,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Delgado Noboa Alicia Concepción</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/DelgadoNoboaAliciaConcepción.png" alt="Delgado Noboa Alicia Concepción" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/DelgadoNoboaAliciaConcepción.png" alt="Delgado Noboa Alicia Concepción" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Delgado Noboa Alicia Concepción</h5>
@@ -199,7 +199,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>González Laprea Jesús Ernesto</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/GonzálezLapreaJesúsErnesto.png" alt="González Laprea Jesús Ernesto" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/GonzálezLapreaJesúsErnesto.png" alt="González Laprea Jesús Ernesto" width="140">
         </div>
         <div class="card-doc-back">
             <h5>González Laprea Jesús Ernesto</h5>
@@ -218,7 +218,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Jaramillo Villagómez Jorge Enrique</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/JaramilloVillagómezJorgeEnrique.png" alt="Jaramillo Villagómez Jorge Enrique" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/JaramilloVillagómezJorgeEnrique.png" alt="Jaramillo Villagómez Jorge Enrique" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Jaramillo Villagómez Jorge Enrique</h5>
@@ -237,7 +237,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Merino Toapanta Andrés Esteban</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/MerinoToapantaAndrésEsteban.png" alt="Merino Toapanta Andrés Esteban" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/MerinoToapantaAndrésEsteban.png" alt="Merino Toapanta Andrés Esteban" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Merino Toapanta Andrés Esteban</h5>
@@ -267,7 +267,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Michelena Rosero César Gustavo</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/MichelenaRoseroCésarGustavo.png" alt="Michelena Rosero César Gustavo" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/MichelenaRoseroCésarGustavo.png" alt="Michelena Rosero César Gustavo" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Michelena Rosero César Gustavo</h5>
@@ -286,7 +286,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Ortíz Palacios César Augusto</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/OrtízPalaciosCésarAugusto.png" alt="Ortíz Palacios César Augusto" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/OrtízPalaciosCésarAugusto.png" alt="Ortíz Palacios César Augusto" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Ortíz Palacios César Augusto</h5>
@@ -305,7 +305,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Osorio López Juan Carlos</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/OsorioLópezJuanCarlos.png" alt="Osorio López Juan Carlos" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/OsorioLópezJuanCarlos.png" alt="Osorio López Juan Carlos" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Osorio López Juan Carlos</h5>
@@ -324,7 +324,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Paredes Proaño Ana Maribel</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/ParedesProañoAnaMaribel.png" alt="Paredes Proaño Ana Maribel" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/ParedesProañoAnaMaribel.png" alt="Paredes Proaño Ana Maribel" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Paredes Proaño Ana Maribel</h5>
@@ -343,7 +343,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Rivera Gálvez Wilson Xavier</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/RiveraGálvezWilsonXavier.png" alt="Rivera Gálvez Wilson Xavier" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/RiveraGálvezWilsonXavier.png" alt="Rivera Gálvez Wilson Xavier" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Rivera Gálvez Wilson Xavier</h5>
@@ -362,7 +362,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Rojas Satian Kevin Ricardo</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/RojasSatianKevinRicardo.png" alt="Rojas Satian Kevin Ricardo" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/RojasSatianKevinRicardo.png" alt="Rojas Satian Kevin Ricardo" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Rojas Satian Kevin Ricardo</h5>
@@ -381,7 +381,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Sarmiento Sarmiento Narcisa Marisol</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/SarmientoSarmientoNarcisaMarisol.png" alt="Sarmiento Sarmiento Narcisa Marisol" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/SarmientoSarmientoNarcisaMarisol.png" alt="Sarmiento Sarmiento Narcisa Marisol" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Sarmiento Sarmiento Narcisa Marisol</h5>
@@ -400,7 +400,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Valverde Arias Pablo Javier</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/ValverdeAriasPabloJavier.png" alt="Valverde Arias Pablo Javier" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/ValverdeAriasPabloJavier.png" alt="Valverde Arias Pablo Javier" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Valverde Arias Pablo Javier</h5>
@@ -419,7 +419,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Viñán Andino Alexandra Belén</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/ViñánAndinoAlexandraBelén.png" alt="Viñán Andino Alexandra Belén" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/ViñánAndinoAlexandraBelén.png" alt="Viñán Andino Alexandra Belén" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Viñán Andino Alexandra Belén</h5>
@@ -438,7 +438,7 @@ title: Docentes
     <div class="card-doc">
         <div class="card-doc-front">
             <h5>Vivas Cortez Miguel José</h5>
-            <img src="{{ site.baseurl }}/assets/icons/docentes/VivasCortezMiguelJosé.png" alt="Vivas Cortez Miguel José" width="140">
+            <img src="{{ site.baseurl }}/assets/images/docentes/VivasCortezMiguelJosé.png" alt="Vivas Cortez Miguel José" width="140">
         </div>
         <div class="card-doc-back">
             <h5>Vivas Cortez Miguel José</h5>
