agrega material de IA4LEGOS

--- a/pages/asistentes/0-asistentes.html
+++ b/pages/asistentes/0-asistentes.html
@@ -23,4 +23,20 @@ title: Asistentes Computacionales
             </div>
         </a>
     </div>
+    <div class="card">
+        <a href="IA4LEGOS-Python.html">
+            <div class="card-body">
+                <h5 class="card-title">IA4LEGOS </br> Python</h5>
+                <img src="{{ site.baseurl }}/assets/icons/ia4legos.png" alt="IA4LEGOS logo" height="90">
+            </div>
+        </a>
+    </div>
+    <div class="card">
+        <a href="IA4LEGOS-CienciaDatos.html">
+            <div class="card-body">
+                <h5 class="card-title">IA4LEGOS </br> Ciencia de datos</h5>
+                <img src="{{ site.baseurl }}/assets/icons/ia4legos.png" alt="IA4LEGOS logo" height="90">
+            </div>
+        </a>
+    </div>
 </div>
