--- a/pages/asistentes/0-asistentes.html
+++ b/pages/asistentes/0-asistentes.html
@@ -27,7 +27,7 @@ title: Asistentes Computacionales
         <a href="IA4LEGOS-Python.html">
             <div class="card-body">
                 <h5 class="card-title">IA4LEGOS </br> Python</h5>
-                <img src="{{ site.baseurl }}/assets/icons/ia4legos.png" alt="IA4LEGOS logo" height="90">
+                <img src="{{ site.baseurl }}/assets/icons/IA4legos.png" alt="IA4LEGOS logo" height="90">
             </div>
         </a>
     </div>
@@ -35,7 +35,7 @@ title: Asistentes Computacionales
         <a href="IA4LEGOS-CienciaDatos.html">
             <div class="card-body">
                 <h5 class="card-title">IA4LEGOS </br> Ciencia de datos</h5>
-                <img src="{{ site.baseurl }}/assets/icons/ia4legos.png" alt="IA4LEGOS logo" height="90">
+                <img src="{{ site.baseurl }}/assets/icons/IA4legos.png" alt="IA4LEGOS logo" height="90">
             </div>
         </a>
     </div>
