agrega calculadora binomial

--- a/pages/asistentes/0-asistentes.html
+++ b/pages/asistentes/0-asistentes.html
@@ -24,6 +24,14 @@ title: Asistentes Computacionales
         </a>
     </div>
     <div class="card">
+        <a href="calc-prob.html">
+            <div class="card-body">
+                <h5 class="card-title">Calculador de probabilidad</h5>
+                <img src="{{ site.baseurl }}/assets/icons/calc-prob.png" alt="Calculador de probabilidad" height="120">
+            </div>
+        </a>
+    </div>
+    <div class="card">
         <a href="IA4LEGOS-Python.html">
             <div class="card-body">
                 <h5 class="card-title">IA4LEGOS </br> Python</h5>
