arregla js de recent commits

--- a/pages/matematica/MatemáticaI-vet.html
+++ b/pages/matematica/MatemáticaI-vet.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: Ecuaciones Diferenciales
+title: Matemática I*
 ---
 
-<h2>Ecuaciones Diferenciales</h2>
+<h2>Matemática I*</h2>
 
 <div class="card-container">
     <div class="card">
