--- a/pages/matematica/Métodosnuméricos.html
+++ b/pages/matematica/Métodosnuméricos.html
@@ -39,5 +39,5 @@ title: Métodos numéricos
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
