--- a/pages/matematica/AlgebraLíneal.html
+++ b/pages/matematica/AlgebraLíneal.html
@@ -59,4 +59,4 @@ title: Álgebra Lineal
     const repoName = "AlgebraLineal-05-N0048";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
