--- a/pages/matematica/MatemáticasDiscretaI.html
+++ b/pages/matematica/MatemáticasDiscretaI.html
@@ -39,5 +39,5 @@ title: Matemáticas Discreta I
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
