--- a/pages/matematica/Álg.LinealyGeom.Analítica.html
+++ b/pages/matematica/Álg.LinealyGeom.Analítica.html
@@ -39,5 +39,5 @@ title: Álg. Lineal y Geom. Analítica
     const repoName = "";
 </script>
 
-{% include recent-commits.html %}
+<script src="{{ site.baseurl }}/assets/js/recent-commits.js"></script>
     
