mejora calc-prob

--- a/pages/asistentes/calc-prob/binomial.html
+++ b/pages/asistentes/calc-prob/binomial.html
@@ -78,10 +78,10 @@ title: Calculadora Binomial
 
     <h4>Fórmulas</h4>
     <ul>
-        <li>La función de probabilidad es \(\displaystyle f(x) = P(X = x) = \binom{n}{x} p^x (1 - p)^{n - x}\), para \(x = 0, 1, \dots, n\).</li>
-        <li>El valor esperado es \(\mu = E(X) = np\).</li>
-        <li>La varianza es \(\sigma^2 = \text{Var}(X) = np(1 - p)\).</li>
-        <li>La desviación estándar es \(\sigma = \sqrt{\text{Var}(X)} = \sqrt{np(1 - p)}\).</li>
+        <li style="margin-bottom: 0px;">La función de probabilidad es \(\displaystyle f(x) = P(X = x) = \binom{n}{x} p^x (1 - p)^{n - x}\), para \(x = 0, 1, \dots, n\).</li>
+        <li style="margin-bottom: 10px;">El valor esperado es \(\mu = E(X) = np\).</li>
+        <li style="margin-bottom: 10px;">La varianza es \(\sigma^2 = \text{Var}(X) = np(1 - p)\).</li>
+        <li style="margin-bottom: 10px;">La desviación estándar es \(\sigma = \sqrt{\text{Var}(X)} = \sqrt{np(1 - p)}\).</li>
     </ul>
 </div>
 
@@ -101,8 +101,9 @@ title: Calculadora Binomial
     </table>
 </div>
 
+
 <!-- Carga de scripts -->
-<script type="text/javascript" src="{{ site.baseurl }}/assets/js/binomial.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/calc-prob/binomial.js"></script>
 
 <!-- Carga Google Charts para gráficos -->
 <script type="text/javascript">
@@ -110,4 +111,4 @@ title: Calculadora Binomial
 </script>
 
 <!-- Script de botones para ayuda y tabla -->
-<script type="text/javascript" src="{{ site.baseurl }}/assets/js/botones-calc-prob.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/calc-prob/botones-calc-prob.js"></script>
