agrega calculadora Poisson

--- a/pages/asistentes/calc-prob.html
+++ b/pages/asistentes/calc-prob.html
@@ -11,4 +11,14 @@ title: Calculador de probabilidad
             Distribución binomial
         </div>
     </a>
+    <a href="calc-prob/poisson.html">
+        <div class="item">
+            Distribución de Poisson
+        </div>
+    </a>
+    <a href="calc-prob/exponencial.html">
+        <div class="item">
+            Distribución exponencial
+        </div>
+    </a>
 </div>
