--- a/pages/asistentes/calc-prob/exponencial.html
+++ b/pages/asistentes/calc-prob/exponencial.html
@@ -19,7 +19,7 @@ title: Calculadora Exponencial
         <tbody>
             <tr>
                 <td>\(\lambda =\)</td>
-                <td><input type="number" name="l" value="" min="0" step="0.1" onchange="validateL(); updateProb();">
+                <td><input type="number" name="l" value="" min="0.1" step="0.1" onchange="validateL(); updateProb(); updatePlot();">
                 </td>
             </tr>
 
